# validin

./: README.md  docs.md  input_validator.py  setup.cfg  setup.py  user_input.py
input_validator/: input_validator.py  validators.py
input_validator/utils/: utils.py
tests/: test_validators.py
validin/: utils.py  validators.py  validin.py
validin/utils/: utils.py
