[metadata]
name = validin-IARLA
version = 0.9.0
author = Iarla Crewe
author_email = iarla.crewe@gmail.com
description = Console input validator for python, allows for any condition to be checked in a clean and consice syntax
long_description = file: README.md
url = https://github.com/iarla-crewe/validin
classifiers =
    Programming Language ::  Python :: 3
    License :: GNU General Public License v3.0
    Operating System :: OS Independent

[options]
package_dir =
    = validin
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src